corrected button text alignment

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -35,7 +35,7 @@ div.logo {
 .links {
   float: left;
   width: 90%;
-  padding-left: 5px;
+  padding-left: 20px;
   display: inline-block;
   line-height: 48px;
 }
@@ -50,6 +50,7 @@ nav ul {
 nav ul li {
   font-size: 1em;
   display: inline-block;
+  padding-right: 20px;
 }
 .login {
   float: right;
@@ -57,7 +58,8 @@ nav ul li {
 .btn {
   border: 1px solid #0C325A;
   line-height: 25px;
-  height: 25px;
+  height: auto;
+  width: auto;
   border-radius: 5px;
   text-align: center;
   padding: 5px 8px;
@@ -90,6 +92,9 @@ nav ul li {
   margin-top: 20px;
   font-size: 20px;
   display: inline-block;
+}
+.jumbo-text .btn p {
+  padding: 5px;
 }
 .jumbo-footer {
   text-align: center;
